# PanelPilot

./: .gitignore  CMakeLists.txt  main.cpp  notes.txt
include/: ili9341_driver.h  pins.h  xpt2046_driver.h
lib/ui/: CMakeLists.txt  actions.h  animations.cpp  animations.h  images.c  images.h  screens.c  screens.h  ui.c  ui_image_drop2.c  ui_image_humidity2.c  ui_image_left_arrow.c  ui_image_plant1.c  ui_image_plant_icon.c  ui_image_plant_icon2.c  ui_image_pot1.c  ui_image_return3.c  ui_image_right_arrow.c  ui_image_sun2.c  ui_image_water_carrier.c  ui_image_water_carrier4.c  ui_image_water_icon.c
src/: ili9341_driver.cpp  main.cpp  xpt2046_driver.cpp
